--- a/.github/workflows/publish/publish.yml
+++ b/.github/workflows/publish/publish.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: github.repository == 'threehook/go-merkle' && github.event.review.state == 'approved'
+    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
 
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
