--- a/.github/workflows/pull-requests/on-approval-merge-to-main.yml
+++ b/.github/workflows/pull-requests/on-approval-merge-to-main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   auto-merge:
-    if: github.repository == 'threehook/go-merkle' && github.event.review.state == 'approved'
+    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
