--- a/.github/workflows/terraform/terraform-apply.yml
+++ b/.github/workflows/terraform/terraform-apply.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   terraform-plan:
-    if: github.repository == 'threehook/go-merkle' && github.event.workflow_run.conclusion == 'success'
+    if: github.repository == 'corbencreatives/actions-test' && github.event.workflow_run.conclusion == 'success'
     name: "Terraform Apply"
     runs-on: ubuntu-latest
     permissions:
