--- a/.github/workflows/terraform/terraform-plan.yml
+++ b/.github/workflows/terraform/terraform-plan.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   terraform-plan:
-    if: github.repository == 'threehook/go-merkle' && github.event.review.state == 'approved'
+    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
     name: "Terraform Plan"
     runs-on: ubuntu-latest
     permissions:
