--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -8,17 +8,17 @@ on:
 
 jobs:
   call-build-and-test:
-    if: github.repository == 'threehook/go-merkle' && github.event.pull_request.merged == true
-    uses: ./.github/workflows/build-and-test.yml@develop
+    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
+    uses: corbencreatives/actions-test/.github/workflows/build-and-test.yml@develop
     secrets: inherit
 
   call-publish:
-    if: github.repository == 'threehook/go-merkle' && github.event.pull_request.merged == true
-    uses: ./.github/workflows/publish/publish.yml@develop
+    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
+    uses: corbencreatives/actions-test/.github/workflows/publish.yml@develop
     secrets: inherit
 
   merge:
-    if: github.repository == 'threehook/go-merkle' && github.event.pull_request.merged == true
+    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Run a script or command
