--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -3,26 +3,25 @@ name: Merge to develop
 on:
   pull_request:
     branches: [develop]
-    types:
-      - closed
+  merge_group:
+    branches: [develop]
 
 jobs:
   call-build-and-test:
-    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
+    if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
     uses: corbencreatives/actions-test/.github/workflows/build-and-test.yml@develop
     secrets: inherit
 
   call-publish:
-    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
+    if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
     uses: corbencreatives/actions-test/.github/workflows/publish.yml@develop
     secrets: inherit
 
-  merge:
-    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run a script or command
-        run: echo "Pull request #${{ github.event.pull_request.number }} was merged into ${GITHUB_REF}"
+#  merge:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Run a script or command
+#        run: echo "Pull request #${{ github.event.pull_request.number }} was merged into ${GITHUB_REF}"
 
 #  auto-merge:
 #    if: github.repository == 'threehook/go-merkle' && github.event.pull_request.merged == true
