--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -14,6 +14,8 @@ jobs:
 
   call-publish:
     if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
+    permissions:
+      packages: write
     uses: corbencreatives/actions-test/.github/workflows/publish.yml@develop
     secrets: inherit
 
