fix: add permission contents: read

--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -15,6 +15,7 @@ jobs:
   call-publish:
     if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
     permissions:
+      contents: read
       packages: write
     uses: corbencreatives/actions-test/.github/workflows/publish.yml@develop
     secrets: inherit
