--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   call-build-and-test:
     if: ${{ github.event_name == 'merge_group' }}
-#    if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
     uses: corbencreatives/actions-test/.github/workflows/build-and-test.yml@develop
     secrets: inherit
 
@@ -22,11 +21,11 @@ jobs:
 #    uses: corbencreatives/actions-test/.github/workflows/publish.yml@develop
 #    secrets: inherit
 
-  merge:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run a script or command
-        run: echo "Pull request #${{ github.event.pull_request.number }} was merged into ${GITHUB_REF}"
+#  merge:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Run a script or command
+#        run: echo "Pull request #${{ github.event.pull_request.number }} was merged into ${GITHUB_REF}"
 
 #  auto-merge:
 #    if: github.repository == 'corbencreatives/actions-test' && github.event.pull_request.merged == true
