--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,9 +5,9 @@ name: 'Build and test develop'
 # E.g. when this 'Build and test develop' action is completed, the 'Publish' action is triggered.
 
 on:
-  pull_request:
-    branches: [develop, main]
-    types: [opened, reopened]
+#  pull_request:
+#    branches: [develop, main]
+#    types: [opened, reopened]
 #  workflow_call:
 
 jobs:
