--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,7 +8,7 @@ on:
 #  pull_request:
 #    branches: [develop, main]
 #    types: [opened, reopened]
-#  workflow_call:
+  workflow_call:
 
 jobs:
   build-test:
