--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -8,14 +8,9 @@ on:
 
 jobs:
   call-build-and-test:
-        runs-on: ubuntu-latest
-        if: ${{ github.event_name == 'merge_group' }}
-        steps:
-          - name: Run a script or command
-            run: echo "Pull request ready!"
-#            run: echo "Pull request #${{ github.event.pull_request.number }} was merged into ${GITHUB_REF}"
-#    uses: corbencreatives/actions-test/.github/workflows/build-and-test.yml@develop
-#    secrets: inherit
+    if: ${{ github.event_name == 'merge_group' }}
+    uses: corbencreatives/actions-test/.github/workflows/build-and-test.yml@develop
+    secrets: inherit
 
 #  call-publish:
 #    if: ${{ github.event_name == 'merge_group' }}
