fix: github.event.action == 'enqueued'

--- a/.github/workflows/on-approval-merge-to-develop.yml
+++ b/.github/workflows/on-approval-merge-to-develop.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   call-build-and-test:
-    if: ${{ github.event_name == 'merge_group' }}
+#    if: ${{ github.event_name == 'merge_group' }}
+    if: github.event_name != 'pull_request' || github.event.action == 'enqueued'
     runs-on: ubuntu-latest
     steps:
       - name: Run a script or command
