--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,6 +8,8 @@ on:
   pull_request:
     branches: [develop, main]
     types: [opened, reopened]
+  merge_group:
+    branches: [develop]
 
 jobs:
   build-test:
