fix: check publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches: [develop, main] # TODO: Check if publish must be done again/separately for main when releasing. Maybe for a release version.
     types: [opened]
+  merge_group:
+    branches: [develop]
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
