--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,6 @@ on:
   pull_request:
     branches: [develop, main] # TODO: Check if publish must be done again/separately for main when releasing. Maybe for a release version.
     types: [opened]
-  merge_group:
-    branches: [develop]
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
@@ -15,7 +13,7 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
+#    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
 
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
