--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   pull_request:
     branches: [develop, main] # TODO: Check if publish must be done again/separately for main when releasing. Maybe for a release version.
-    types: [opened]
+    types: [closed]
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
@@ -13,8 +13,6 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
-#    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
-
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
       contents: read
