--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,8 +1,9 @@
 name: Terraform Plan
 
 on:
-  pull_request_review:
-    types: [submitted]
+  pull_request:
+    branches: [develop, main]
+    types: [closed]
 
 env:
   TF_CLOUD_ORGANIZATION: "corbencreatives"
@@ -12,7 +13,7 @@ env:
 
 jobs:
   terraform-plan:
-    if: github.repository == 'corbencreatives/actions-test' && github.event.review.state == 'approved'
+    if: github.event.review.state == 'approved'
     name: "Terraform Plan"
     runs-on: ubuntu-latest
     permissions:
