--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,7 +2,7 @@ name: Terraform
 
 on:
   workflow_run:
-    workflows: ["Publish"]
+    workflows: [Publish]
     branches: [develop, main]
     types: [completed]
 
