--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,6 @@ jobs:
         with:
             push: true
             tags: |
-              ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ IMAGE_NAME }}:latest
-              ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ IMAGE_NAME }}:${{ env.SHORT_SHA }}
+              ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+              ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ envIMAGE_NAME }}:${{ env.SHORT_SHA }}
             labels: ${{ steps.meta.outputs.labels }}
