feat: tf_api_token in destroy

--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -6,6 +6,7 @@ on:
 env:
   TF_WORKSPACE: "actions-test"
   CONFIG_DIRECTORY: "./terraform"
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
 
 jobs:
   destroy-workspace:
