--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,6 +1,9 @@
 name: 'Build and test develop'
 
 on:
+  pull_request:
+    branches: [develop, main]
+    types: [opened, reopened]
   merge_group:
     branches: [develop]
 
