--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,10 +1,12 @@
 name: 'Terraform'
 
 on:
-  workflow_run:
-    workflows: [Publish]
-    branches: [develop, main]
-    types: [completed]
+  workflow_dispatch:
+#on:
+#  workflow_run:
+#    workflows: [Publish]
+#    branches: [develop, main]
+#    types: [completed]
 
 env:
   TF_CLOUD_ORGANIZATION: "corbencreatives"
