--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -92,7 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    environment: ${{ env.ENVIRONMENT }}
+    environment: ${{ ENVIRONMENT }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
