--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -5,7 +5,8 @@ on:
 
 env:
   TF_CLOUD_ORGANIZATION: "corbencreatives"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+#  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+  TF_TOKEN_app_terraform_io: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "actions-test"
   CONFIG_DIRECTORY: "./terraform"
 
