--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -7,8 +7,8 @@ env:
   TF_CLOUD_ORGANIZATION: "corbencreatives"
   TF_WORKSPACE: "actions-test"
   CONFIG_DIRECTORY: "./terraform"
-  TF_TOKEN_app_terraform_io: "${{ secrets.TF_API_TOKEN }}"
-  TF_VAR_arm_subscription_id: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
+  TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
+  TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID_NO_QUOTES }}
 
 jobs:
   destroy-workspace:
