--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -45,46 +45,17 @@ jobs:
 
 
       - name: Get Plan Output
-        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
+        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
         id: plan-output
         with:
           plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
 
-#      - name: Update PR
-#        uses: actions/github-script@v6
-#        id: plan-comment
-#        with:
-#          github-token: ${{ secrets.GITHUB_TOKEN }}
-#          script: |
-#            // 1. Retrieve existing bot comments for the PR
-#            const { data: comments } = await github.rest.issues.listComments({
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              issue_number: context.issue.number,
-#            });
-#            const botComment = comments.find(comment => {
-#              return comment.user.type === 'Bot' && comment.body.includes('HCP Terraform Plan Output')
-#            });
-#            const output = `#### HCP Terraform Plan Output
-#                \`\`\`
-#                Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-#                \`\`\`
-#                [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
-#                `;
-#            // 3. Delete previous comment so PR timeline makes sense
-#            if (botComment) {
-#              github.rest.issues.deleteComment({
-#                owner: context.repo.owner,
-#                repo: context.repo.repo,
-#                comment_id: botComment.id,
-#              });
-#            }
-#            github.rest.issues.createComment({
-#              issue_number: context.issue.number,
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              body: output
-#            });
+      - name: Reference Plan Output
+        run: |
+          echo "Plan status: ${{ steps.plan-output.outputs.plan_status }}"
+          echo "Resources to Add: ${{ steps.plan-output.outputs.add }}"
+          echo "Resources to Change: ${{ steps.plan-output.outputs.change }}"
+          echo "Resources to Destroy: ${{ steps.plan-output.outputs.destroy }}"
 
 
   terraform-apply:
