--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -45,29 +45,24 @@ jobs:
 
 
       - name: Get Plan Output
-#        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
-#        id: plan-output
-#        with:
-#          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
         id: plan-output
         with:
-          plan: ${{ steps.run.outputs.plan_id }}
+          plan: ${{ steps.plan-run.outputs.plan_id }}
 
-
-      - name: Update PR
+      - name: Show Plan Output
         uses: actions/github-script@v6
         id: plan-comment
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `#### HCP Terraform Plan Output
-                \`\`\`
-                Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-                \`\`\`
-                [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
-                `;
-
+        run: |
+          PLAN_OUTPUT = `#### HCP Terraform Plan Output
+          \`\`\`
+          Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
+          \`\`\`
+          [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
+          `;
+          echo ${PLAN_OUTPUT}
 
   terraform-apply:
     name: "Terraform Apply"
