--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -51,18 +51,22 @@ jobs:
           plan: ${{ steps.plan-run.outputs.plan_id }}
 
       - name: Show Plan Output
-        uses: actions/github-script@v6
-        id: plan-comment
+        uses: actions/github-script@v7.0.1
+        id: plan-output
+#        with:
+#          github-token: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          PLAN_OUTPUT = `#### HCP Terraform Plan Output
-          \`\`\`
-          Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-          \`\`\`
-          [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
-          `;
-          echo ${PLAN_OUTPUT}
+          script: |
+            const output = `#### HCP Terraform Plan Output
+               \`\`\`\n
+               Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
+               \`\`\`
+               [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
+               `
+
+      - name: Show Plan Output
+        run: echo "${{steps.plan-output.outputs.result}}"
+
 
   terraform-apply:
     name: "Terraform Apply"
