--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Show Plan Output
         uses: actions/github-script@v7.0.1
-        id: plan-output
+        id: show-output
 #        with:
 #          github-token: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -65,7 +65,7 @@ jobs:
                `
 
       - name: Show Plan Output
-        run: echo "${{steps.plan-output.outputs.result}}"
+        run: echo "${{steps.show-output.outputs.result}}"
 
 
   terraform-apply:
