--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -59,12 +59,8 @@ jobs:
 #          github-token: ${{ secrets.GITHUB_TOKEN }}
         with:
           script: |
-            return `#### HCP Terraform Plan Output
-               \`\`\`\n
-               Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-               \`\`\`
-               [HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})
-               `
+            return "#### HCP Terraform Plan Output ####\nPlan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.\n[HCP Terraform Plan](${{ steps.plan-run.outputs.run_link }})"
+            result-encoding: string
 
       - name: Show Plan Output
         run: echo "${{steps.show-output.outputs.result}}"
