--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -13,9 +13,9 @@ env:
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "actions-test"
   CONFIG_DIRECTORY: "./terraform"
-  TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-  TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-  TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+  TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID_QUOTED }}
+  TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID_QUOTED }}
+  TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID_QUOTED }}
 
 jobs:
   terraform-plan:
