--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -16,6 +16,7 @@ env:
   TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID_QUOTED }}
   TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID_QUOTED }}
   TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID_QUOTED }}
+  TF_VAR_arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET_QUOTED }}
 
 jobs:
   terraform-plan:
