--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -14,9 +14,9 @@ env:
   TF_WORKSPACE: "actions-test"
   CONFIG_DIRECTORY: "./terraform"
   TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID_QUOTED }}
-  TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID_QUOTED }}
-  TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID_QUOTED }}
-  TF_VAR_arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET_QUOTED }}
+  TF_VAR_ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID_QUOTED }}
+  TF_VAR_ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID_QUOTED }}
+  TF_VAR_ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET_QUOTED }}
 
 jobs:
   terraform-plan:
