--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -8,9 +8,9 @@ env:
   TF_WORKSPACE: "actions-test"
   CONFIG_DIRECTORY: "./terraform"
   TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
-  TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-  TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-  TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
+  TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  TF_VAR_ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  TF_VAR_ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
 
 jobs:
   destroy-workspace:
