--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,10 @@ name: 'Deploy'
 
 on:
   workflow_run:
-    workflows: ['Terraform Apply']
-    branches: [develop, main]
-    types: [completed]
+    workflows: ["Terraform Apply"]
+#    branches: [develop, main]
+    types:
+      - completed
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
