Tf api token (#92)
* feat: terraform after new tf_api_token

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: ENVIRONMENT without env.

* feat: ENVIRONMENT with vars prefix.

* feat: remove env vars ENVIRONMENTS

* feat: remove env vars ENVIRONMENTS

* feat: remove env vars ENVIRONMENTS

* feat: remove env vars ENVIRONMENTS

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* fix: warnings

* fix: warnings

* fix: warnings

* fix: terraform after merge successful

* fix: don't run merge checks twice

* feat: deploy

* feat: deploy

* feat: deploy

* feat: deploy

* feat: deploy

* feat: use paths

* feat: use paths

--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -8,8 +8,15 @@ name: 'Terraform TST'
 
 on:
   pull_request:
-    branches: [develop, main] # TODO: Check if publish must be done again/separately for main when releasing. Maybe for a release version.
     types: [closed]
+    paths:
+      - 'terraform/**'
+      - '.github/workflows/**'
+
+#on:
+#  pull_request:
+#    branches: [develop, main] # TODO: Check if publish must be done again/separately for main when releasing. Maybe for a release version.
+#    types: [closed]
 
 env:
   TF_CLOUD_ORGANIZATION: "corbencreatives"
