feat: use paths

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy
+name: 'Deploy'
 
 on:
   workflow_run:
-    workflows: [Terraform TST]
+    workflows: ['Terraform TST']
 #    branches: [develop, main]
     types: [completed]
 
