--- a/.github/workflows/terraform-tst.yml
+++ b/.github/workflows/terraform-tst.yml
@@ -1,10 +1,4 @@
-name: Terraform TST
-
-#on:
-#  workflow_run:
-#    workflows: [Publish]
-#    branches: [develop, main]
-#    types: [completed]
+name: 'Terraform TST'
 
 on:
   pull_request:
@@ -84,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    environment: test
+#    environment: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
