--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,7 +2,7 @@ name: 'Build and test develop'
 
 on:
   pull_request:
-    branches: [develop, main]
+#    branches: [develop, main]
     types: [opened, reopened]
   merge_group:
     branches: [develop, main]
