feat: made terraform separate proj

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   build-test:
-    if: ${{ github.event_name == 'pull_request' }} # only run job if workflow initiated by a pull request event
+    if: github.event_name == 'pull_request' # only run job if workflow initiated by a pull request event
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +33,7 @@ jobs:
         run: go test -v ./...
 
   golangci-lint:
-    if: ${{ github.event_name == 'pull_request' }} # only run job if workflow initiated by a pull request event
+    if: github.event_name == 'pull_request' # only run job if workflow initiated by a pull request event
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
