--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: 'Deploy'
 
 on:
   workflow_run:
-    workflows: ['Terraform TST']
-#    branches: [develop, main]
+    workflows: ['Publish']
+    branches: [develop, main]
     types: [completed]
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
@@ -24,7 +24,7 @@ jobs:
           token: ${{ secrets.REGISTRY_TOKEN }} # only needed if version is 'latest'
 
       - name: Checkout source code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Package helm chart
         run: helm package chart
@@ -37,9 +37,9 @@ jobs:
 
       - name: Install kubectl
         id: install_kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v4.0.0' # default is latest stable
+        uses: azure/setup-kubectl@v4.0.0
+#        with:
+#          version: 'v4.0.0' # default is latest stable
 
       - name: Create kube config
         uses: azure/k8s-set-context@v3
