Tf api token (#104)
* feat: terraform after new tf_api_token

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: tf_api_token in destroy

* feat: ENVIRONMENT without env.

* feat: ENVIRONMENT with vars prefix.

* feat: remove env vars ENVIRONMENTS

* feat: remove env vars ENVIRONMENTS

* feat: remove env vars ENVIRONMENTS

* feat: remove env vars ENVIRONMENTS

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* feat: subscription_id

* fix: warnings

* fix: warnings

* fix: warnings

* fix: terraform after merge successful

* fix: don't run merge checks twice

* feat: deploy

* feat: deploy

* feat: deploy

* feat: deploy

* feat: deploy

* feat: use paths

* feat: use paths

* feat: use paths

* feat: use paths

* feat: use paths

* feat: add chart folder

* feat: made terraform separate proj

* feat: made terraform separate proj

* feat: made terraform separate proj

* feat: made terraform separate proj

* feat: made terraform separate proj

* fix: set KUBE_CONFIG

* fix: set cube-context

* fix: set app

* fix: set app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,6 @@ jobs:
 
       - name: Deploy to k8s
         run: |
-          helm upgrade --install go-merkle oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/go-merkle \
-          --version 0.1.0 --kube-token ${{ secrets.DELIVERYBOT_TOKEN }} --kube-context cicdcluster \
+          helm upgrade --install actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/go-merkle \
+          --version latest --kube-token ${{ secrets.DELIVERYBOT_TOKEN }} --kube-context cicdcluster \
           --namespace cicd --create-namespace --insecure-skip-tls-verify
