--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,6 @@ jobs:
 
       - name: Deploy to k8s
         run: |
-          helm upgrade --install actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/go-merkle \
+          helm upgrade --install corbencreatives/actions-test oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/go-merkle \
           --version latest --kube-token ${{ secrets.DELIVERYBOT_TOKEN }} --kube-context cicdcluster \
           --namespace cicd --create-namespace --insecure-skip-tls-verify
