--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/corbencreatives/corbencreatives/actions-test
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  # tag: ""
+  tag: "latest"
 
 imagePullSecrets:
   - name: registrypullsecret
