fix: use deliverybot/helm action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,69 +1,63 @@
 name: 'Deploy'
 
-on: ['deployment']
-
-#  workflow_run:
-#    workflows: ['Publish']
-##    branches: [develop, main]
-#    types: [completed]
+on:
+  workflow_run:
+    workflows: ['Publish']
+#    branches: [develop, main]
+    types: [completed]
 
 env:
   REGISTRY: ghcr.io
 
 jobs:
-  deployment:
-    runs-on: 'ubuntu-latest'
+  deploy:
+    runs-on: ubuntu-latest
+#    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+#    environment: test
     steps:
-      - name: 'Checkout'
-        uses: 'actions/checkout@v4'
-#  deploy:
-#    runs-on: ubuntu-latest
-##    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-##    environment: test
-#    steps:
-#      - name: Install helm
-#        id: install_helm
-#        uses: azure/setup-helm@v3
-#        with:
-#          # version: '<version>' # default is latest (stable)
-#          token: ${{ secrets.REGISTRY_TOKEN }}
-#
-#      - name: Checkout source code
-#        uses: actions/checkout@v4
-#
-#      - name: Package helm chart
-#        run: helm package chart
-#
-#      - name: Login to registry
-#        run: helm registry login ${{ env.REGISTRY }}/${{ github.repository_owner }} -u ${{ github.repository_owner }} -p ${{ secrets.REGISTRY_TOKEN }}
-#
-#      - name: Push chart to registry
-#        run: helm push ./go-merkle-0.1.0.tgz oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts
-#
-#      - name: Install kubectl
-#        id: install_kubectl
-#        uses: azure/setup-kubectl@v4.0.0
-##        with:
-##          version: 'v4.0.0' # default is latest stable
-#
-#      - name: Create kube config
-#        uses: azure/k8s-set-context@v3
-#        with:
-#          method: kubeconfig
-#          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      - name: Install helm
+        id: install_helm
+        uses: azure/setup-helm@v3
+        with:
+          # version: '<version>' # default is latest (stable)
+          token: ${{ secrets.REGISTRY_TOKEN }}
 
-#      - name: Deploy to k8s
-#        run: |
-#          helm upgrade --install go-merkle oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/go-merkle --version 0.1.0 --kube-context cicdcluster --namespace cicd --create-namespace --insecure-skip-tls-verify
+      - name: Checkout source code
+        uses: actions/checkout@v4
+
+      - name: Package helm chart
+        run: helm package chart
+
+      - name: Login to registry
+        run: helm registry login ${{ env.REGISTRY }}/${{ github.repository_owner }} -u ${{ github.repository_owner }} -p ${{ secrets.REGISTRY_TOKEN }}
+
+      - name: Push chart to registry
+        run: helm push ./go-merkle-0.1.0.tgz oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts
+
+      - name: Install kubectl
+        id: install_kubectl
+        uses: azure/setup-kubectl@v4.0.0
+#        with:
+#          version: 'v4.0.0' # default is latest stable
+
+      - name: Create kube config
+        uses: azure/k8s-set-context@v3
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBE_CONFIG }}
 
       - name: Deploy to k8s
-        # Parameters are pulled directly from the GitHub deployment event so the
-        # configuration for the job here is very minimal.
-        uses: 'deliverybot/helm@v1.5.0'
-        with:
-          namespace: 'cicd'
-          chart: 'app'
-          version: '${{ github.sha }}'
-          token: '${{ github.token }}'
-        env:
-          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+        run: |
+          helm upgrade --install go-merkle oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/go-merkle --version 0.1.0 --kube-token ${{ secrets.DELIVERYBOT_TOKEN }} --kube-context cicdcluster --namespace cicd --create-namespace --insecure-skip-tls-verify
+
+#      - name: Deploy to k8s
+#        # Parameters are pulled directly from the GitHub deployment event so the
+#        # configuration for the job here is very minimal.
+#        uses: 'deliverybot/helm@v1.5.0'
+#        with:
+#          namespace: 'cicd'
+#          chart: 'app'
+#          version: '${{ github.sha }}'
+#          token: '${{ github.token }}'
+#        env:
+#          KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
